# aoc-2023

./: .clang-format  .gitattributes  .gitignore  Dockerfile  README.md  default.nix  flake.nix  justfile  meson.build  meson.options  pkg.nix
.git-crypt/keys/default/0/: 1B96A8CDC7B052BC64726526A4797A23FAA6FB2C.gpg  C59C617C4C0775A68F99B56C0B9E77FAF582D460.gpg
.github/workflows/: badges.yml  ci.yml
include/: solve.h
include/aoc/: all.h  io.h  macros.h  math.h  parser.h  point.h  string.h  types.h
input/: README.md  day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt
lib/aoc/: io.c  math.c  parser.c  point.c  string.c
puzzle/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md
src/: main.c
src/day01/: solve.c  solve_test.c
src/day02/: solve.c  solve_test.c
src/day03/: solve.c  solve_test.c
src/day04/: solve.c  solve_test.c  sort.c
src/day05/: solve.c  solve_test.c
src/day06/: solve.c  solve_test.c
src/day07/: hand.c  hand.h  part1.c  part1.h  part2.c  part2.h  solve.c  solve_test.c
src/day08/: solve.c  solve_test.c
src/day09/: solve.c  solve_test.c
src/day10/: solve.c  solve_test.c
src/day11/: solve.c  solve_test.c
src/day12/: backtrack.c  backtrack.h  solve.c  solve_test.c  spring.h
src/day13/: solve.c  solve_test.c
src/day14/: solve.c  solve_test.c
src/day15/: solve.c  solve_test.c
src/day16/: solve.c  solve_test.c
src/day17/: solve.c  solve_test.c
src/day18/: solve.c  solve_test.c
src/day19/: solve.c  solve_test.c
src/day20/: solve.c  solve_test.c
src/template/: solve.c  solve_test.c
